# LyricLytic

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HUB.codex.md  README.en.md  README.md  SECURITY.md  Start.bat  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.manual-bb.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.five-tool-validation/: vitest-results.json
.github/: pull_request_template.md
docs/: BIRDSEYE.md  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_style_vocal.sql  003_add_version_style_vocal.sql  004_add_version_bpm.sql  005_add_working_draft_bpm.sql
src-tauri/scripts/: rhyme_analysis.py
src-tauri/src/: compatibility_tests.rs  db.rs  error.rs  main.rs  models.rs
src-tauri/src/commands/: draft.rs  export.rs  file_io.rs  fragment.rs  llm_runtime.rs  mod.rs  project.rs  revision_note.rs  rhyme.rs  song_artifact.rs  style_profile.rs  trash.rs  version.rs
src-tauri/src/commands/rhyme/: sudachi_adapter.rs
src-tauri/src/repositories/: draft_repo.rs  export_repo.rs  fragment_repo.rs  mod.rs  project_repo.rs  revision_note_repo.rs  song_artifact_repo.rs  style_profile_repo.rs  version_repo.rs
src-tauri/src/repositories/export_repo/: artifact_data.rs  project_data.rs  quick_export.rs  version_data.rs
src-tauri/src/services/: mod.rs  write.rs  write_tests.rs
src-tauri/tests/fixtures/v1.1.0/: README.md  SHA256SUMS  lyriclytic-v1.1.0.db
(+270 files in other folders)
