[package]
name = "lyriclytic"
version = "1.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"
zip = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "backup"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
zip = "2"
sha2 = "0.10"

sudachi = { version = "=0.6.12-a1", git = "https://github.com/WorksApplications/sudachi.rs.git", rev = "f4dd8f20a774bd71d34a7d4ffa00d987b8946f9e" }
wana_kana = "=5.0.0"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
